--- a/account.html
+++ b/account.html
@@ -5,11 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/general.css">
     <link rel="stylesheet" href="./css/banner.css">
+    <link rel="stylesheet" href="./css/form.css">
     <link rel="stylesheet" href="./css/account.css">
     <script type="module" src="./scripts/header.js"></script>
     <script type="module" src="./scripts/footer.js"></script>
     <script src="./scripts/policies.js"></script>
-    <script src="./scripts/account.js"></script>
+    <script type="module" src="./scripts/account.js"></script>
   </head>
   <body>
     <!--Must import header.js for this to work-->
@@ -51,7 +52,7 @@
         <span class="title txt-w-600 txt-s-36">Register</span>
         <div class="input-field">
           <label for="email">Email address</label>
-          <input name="email" id="email" type="text" placeholder="" required>
+          <input name="email" id="email" type="text" required>
         </div>
         <div class="info">
           <p>A link to set a new password will be sent to your email address.</p>
