--- a/index.html
+++ b/index.html
@@ -50,12 +50,14 @@
     <div class="new-arrivals-section-ctn">
       <div class="new-arrivals-ctn">
         <div class="new-arrivals-img-ctn">
-          <img class="product-img" src="assets/products/asgaard_sofa.png">
+            <img class="product-img" src="assets/products/asgaard_sofa.png">
         </div>
         <div class="new-arrivals-title-ctn">
           <p class="txt-s-24">New Arrivals</p>
-          <p class="product-name txt-s-48 txt-w-700">Placeholder</p>
-          <button class="order-btn">Order Now</button>
+          <p class="product-name txt-s-48 txt-w-700">Asgaard Sofa</p>
+          <a class="" href="./singleproduct.html?id=14">
+            <button class="order-btn">Order Now</button>
+          </a>
         </div>
       </div>
     </div>
@@ -65,7 +67,7 @@
       <span class="section-caption txt-s-16 txt-w-500">Find a bright ideal to suit your taste with our great selection</span>
       <div class="blogs-view"></div>
       <div class="view-all-btn">
-        <a class="txt-s-20 txt-w-500" href="./blog.html">View All Post</a>
+        <a class="txt-s-20 txt-w-500" href="#">View All Post</a>
         <hr class="button-line">
       </div>
     </div>
