--- a/shop.html
+++ b/shop.html
@@ -57,8 +57,8 @@
 
     <div class="paginate-block">
       <input type="button" id="paginate-prev" class="paginate-btn hide" value="prev">
-      <a class="paginate-index paginate-btn" href="*?page=1" data-page="1">1</a>
-      <a class="paginate-index paginate-btn" href="#&page=1" data-page="2">2</a>
+      <a class="paginate-index paginate-btn" href="#" data-page="1">1</a>
+      <a class="paginate-index paginate-btn" href="#" data-page="2">2</a>
       <input type="button" id="paginate-next" class="paginate-btn" value="next">
     </div>
 
