--- a/shop.html
+++ b/shop.html
@@ -1,7 +1,7 @@
 <html lang="en">
   <head>
     <title>Shop</title>
-    <meta http-equiv="content-type" content="text/html" charset="utf-8">
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/general.css">
     <link rel="stylesheet" href="./css/shop.css">
@@ -41,8 +41,7 @@
       </div>
       <div class="rh-options">
         <label for="show">Show</label>
-        <input class="show-count-input" id="show-count-input" type="number"
-          name="limit" value="16">
+        <input class="show-count-input" id="limit" type="number" name="limit">
         <label for="sort">Sort by</label>
         <select class="sort-sel" name="sort" id="sort">
           <option value="default">Default</option>
@@ -56,10 +55,6 @@
     <div class="products-view"></div>
 
     <div class="paginate-block">
-      <input type="button" id="paginate-prev" class="paginate-btn hide" value="prev">
-      <a class="paginate-index paginate-btn" href="#" data-page="1">1</a>
-      <a class="paginate-index paginate-btn" href="#" data-page="2">2</a>
-      <input type="button" id="paginate-next" class="paginate-btn" value="next">
     </div>
 
     <!--Must import policies.js for this to work-->
