--- a/shop.html
+++ b/shop.html
@@ -52,10 +52,8 @@
       </div>
     </form>
 
-    <div class="products-view"></div>
-
-    <div class="paginate-block">
-    </div>
+    <div class="products-view" id="products-view"></div>
+    <div class="paginate-block" id="paginate-block"></div>
 
     <!--Must import policies.js for this to work-->
     <policies-component></policies-component>
